[gd_scene load_steps=18 format=3 uid="uid://c7ikl8lty5v2t"]

[ext_resource type="Script" path="res://enemies/enemy.gd" id="1_acsrm"]
[ext_resource type="Texture2D" uid="uid://bqxnvh5r2ds0x" path="res://assets/enemy_saucer.png" id="1_n5vef"]
[ext_resource type="PackedScene" uid="uid://0kpue81g56kw" path="res://enemies/enemy_paths.tscn" id="2_41ltj"]
[ext_resource type="PackedScene" uid="uid://d0rbaagvtde5b" path="res://weapons/bullet/enemy_bullet.tscn" id="2_carm0"]
[ext_resource type="PackedScene" uid="uid://cjrqjsrd8np6v" path="res://shared/explosion.tscn" id="4_hu2w8"]
[ext_resource type="AudioStream" uid="uid://clbetew7p1r7h" path="res://assets/sounds/enemy_laser.wav" id="6_8oxlx"]
[ext_resource type="AudioStream" uid="uid://cto11h57715dh" path="res://assets/sounds/explosion.wav" id="7_kyc33"]
[ext_resource type="AudioStream" uid="uid://s2j37w7g5478" path="res://assets/sounds/hitmarker.mp3" id="8_xt7lj"]
[ext_resource type="Texture2D" uid="uid://36vvpuclhoc3" path="res://assets/corona.png" id="9_ju6qu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6yohx"]
radius = 36.0

[sub_resource type="Animation" id="Animation_07ju2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_d3fx0"]
resource_name = "flash"
length = 0.25
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.929412, 0.145098, 0.223529, 1), Color(1, 1, 1, 1), Color(0.905882, 0, 0.27451, 1), Color(1, 1, 1, 1), Color(0.941176, 0.109804, 0.192157, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qi3ty"]
_data = {
"RESET": SubResource("Animation_07ju2"),
"flash": SubResource("Animation_d3fx0")
}

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_ain4g"]
blend_mode = 1

[sub_resource type="Curve" id="Curve_m5nrd"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.991736, 0.026738), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_tbwc6"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="Curve" id="Curve_xkglb"]
min_value = -1.0
_data = [Vector2(0, 0.847059), 0.0, 0.0, 0, 0, Vector2(1, 0.902674), 0.0, 0.0, 0, 0]
point_count = 2

[node name="Enemy" type="Area2D" groups=["enemies"]]
script = ExtResource("1_acsrm")
bullet_scene = ExtResource("2_carm0")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_n5vef")
hframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_6yohx")

[node name="EnemyPaths" parent="." instance=ExtResource("2_41ltj")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qi3ty")
}

[node name="Explosion" parent="." instance=ExtResource("4_hu2w8")]
visible = false

[node name="GunCooldown" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="ShootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_8oxlx")
volume_db = -15.0

[node name="ExplosionSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_kyc33")
volume_db = -10.0

[node name="HitMarkerSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_xt7lj")
volume_db = -10.0

[node name="TrailParticles" type="CPUParticles2D" parent="."]
show_behind_parent = true
material = SubResource("CanvasItemMaterial_ain4g")
amount = 20
texture = ExtResource("9_ju6qu")
emission_shape = 1
emission_sphere_radius = 50.0
direction = Vector2(0, 0)
spread = 0.0
gravity = Vector2(0, 0)
scale_amount_min = 0.1
scale_amount_max = 0.1
scale_amount_curve = SubResource("Curve_m5nrd")
color_ramp = SubResource("Gradient_tbwc6")
hue_variation_min = -0.75
hue_variation_max = 0.59
hue_variation_curve = SubResource("Curve_xkglb")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="GunCooldown" to="." method="_on_gun_cooldown_timeout"]
